--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["hatchling"] 
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["cfgc"]
+
 [project] 
 name = "config-center"
 version = "0.0.0a3"
